--- a/css/Especificidad/styles.css
+++ b/css/Especificidad/styles.css
@@ -5,29 +5,25 @@
 }
 h1 {
   color: purple;
-  font-family: serif;
+  font-family: monospace;
   margin-bottom: 10px;
-}
-
-#page-tittle {
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .tittle {
   font-size: 18px;
 }
 
-#main-nav {
+.nav {
   margin-top: 10px;
   list-style-type: none;
   padding-left: 0px;
 }
 
-#main-nav li {
+.nav li {
   display: inline-block;
 }
 
-#main-nav a {
+.nav a {
   color: white;
   background: #13a4a4;
   padding: 5px;
@@ -39,6 +35,6 @@ h1 {
   -o-border-radius: 2px;
 }
 
-#main-nav .blog {
+.nav w.blog {
   background-color: red;
 }
