--- a/Practica-clone-google/style.css
+++ b/Practica-clone-google/style.css
@@ -1,5 +1,201 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-size: 13px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+header {
+  width: 100%;
+  height: auto;
+  padding: 8px;
+}
+
+header nav {
+  display: flex;
+  justify-content: flex-end;
+}
+
+header nav .nav-right-section {
+  width: 20%;
+  height: auto;
+  display: flex;
+  list-style: none;
+  justify-content: right;
+  align-items: center;
+}
+
+nav .nav-right-section a {
+  margin: 0 8px;
+  color: #303030;
+}
+
+/* nav .nav-right-section .menu-icon {
+  justify-content: center;
+  align-items: center;
+} */
+
+nav .nav-right-section img {
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+nav .lab-icon, .menu-icon {
+  fill: #303030;
+}
+
+main {
+  margin: 15% 0 0 0;
+  text-align: center;
+  
+}
+
+main .main-logo {
+  /* height: calc(100% - 285px); */
+  width: 530px;
+  margin: 0 auto 35px;
+}
+
+main .main-logo img {
+  width: 300px;
+}
+
+main .main-input {
+  width: 530px;
+  margin: 0 auto 35px;
+}
+
+main .main-input-container {
+  width: 100%;
+  border-radius: 100px;
+  padding: 0 16px;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  -ms-border-radius: 100px;
+  -o-border-radius: 100px;
+  border: solid 1px #dfe1e5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+}
+
+main .main-input input {
+  width: 100%;
+  height: 40px;
+  border: none;
+
+  outline: none;
+}
+
+main .main-input-container:hover {
+  box-shadow: 0 1px 6px 0 #45464938;
+  border-color: #c0c0c0;
+}
+
+main .main-input .search-icon {
+  max-height: 14px;
+}
+
+main .main-input .micro-icon {
+  max-height: 20px;
+}
+
+main .main-input .camera-icon {
+  max-height: 18px;
+}
+
+main .main-buttons {
+  width: 530px;
+  margin: 0 auto;
+}
+
+main .main-buttons div {
+  display: inline-block;
+  padding: 0 8px;
+}
+
+main .main-buttons button {
+  height: 36px;
+  background-color: #f2f2f2;
+  border: 0;
+  font-size: 14px;
+  color: #5f6368;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  padding: 0 15px;
+  cursor: pointer;
+}
+
+main .main-buttons button:hover {
+  border: solid 1px #c6c6c6;
+  box-shadow: 0 1px 1px #c6c6c6;
+  color: #4e545c;
+}
+
+main .main-language{
+  width: 530px;
+  margin: 0 auto;
+  align-items: center;
+  margin-top: 32px;
+}
+main .language {
+  display: inline-block;
+  align-items: center;
+  font-size: 13px;
+  color: #9c9a9a;
+  
+} 
+
+footer{
+  width: 100%;
+  height: 60px;
+  position:absolute;
+  bottom: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  font-size: 13px;
+  background-color: #f2f2f2;
+  border-top: 1px solid #e4e4e4;
+}
+
+footer ul{
+  margin: 10px;
+  list-style: none;
+  display: flex;
+  padding-left: 0;
+}
+
+footer .footer-left{
+  justify-content: left;
+}
+
+footer .footer-right{
+  justify-content: right;
+}
+
+footer ul li a{
+  margin: 10px;
+  color: #5f6368;
+}
+
+footer ul li a:hover{
+    color: #55575a;
+    text-decoration: underline;
 }
